--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   get: ^4.6.6
   blurrycontainer: 2.1.0
+  dio: ^5.7.0
+  flutter_bloc: ^8.1.6
+  image_picker: ^1.1.2
+  lottie: ^3.1.3
 
 
 dev_dependencies:
@@ -64,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
