--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   get: ^4.6.6
-  blurrycontainer: 2.1.0
   dio: ^5.7.0
   flutter_bloc: ^8.1.6
   image_picker: ^1.1.2
   lottie: ^3.1.3
+  shared_preferences: ^2.2.3
+  animated_splash_screen: ^1.3.0
+  animate_do: ^3.3.4
 
 
 dev_dependencies:
